# compute_rasterizer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: Box.h  Camera.h  CameraController.h  ComputeRasterizerWrapper.h  CudaProgram.h  Debug.h  Framebuffer.h  Frustum.h  GLBuffer.h  GLTimerQueries.h  ImGuiOverlay.h  LasLoader.h  LasLoaderSparse.h  LasReader.h  Method.h  OpenVRHelper.h  OrbitControls.h  Plane.h  PointCloudItem.h  PointCloudQuickRenderer.h  PointCloudRenderer.h  PointManager.h  ProgressiveFileBuffer.h  Renderer.h  Runtime.h  Shader.h  SimLOD.h  TaskPool.h  Texture.h  VrRuntime.h  drawBoundingBoxes.h  drawBoundingBoxesIndirect.h  drawBoxes.h  drawPoints.h  unsuck.hpp  unsuck_platform_specific.cpp  utils.h
libs/openvr/src/: CMakeLists.txt
modules/compute/: ComputeLasLoader.cpp  ComputeLasLoader.h  LasLoaderSparse.cpp  LasLoaderSparse.h  LasLoaderStandard.h  PotreeData.h  Resources.h
modules/compute_loop_las/: compute_loop_las.cpp  compute_loop_las.h  compute_loop_las_shaders.h  resolve.cs
modules/compute_loop_las_cuda/: compute_loop_las_cuda.h
src/: CameraController.cpp  Framebuffer.cpp  GLBuffer.cpp  GLTimerQueries.cpp  ImGuiOverlay.cpp  LasLoaderSparse.cpp  LasReader.cpp  OpenVRHelper.cpp  OrbitControls.cpp  PointCloudItem.cpp  PointCloudQuickRenderer.cpp  PointCloudRenderer.cpp  PointManager.cpp  Renderer.cpp  Texture.cpp  main.cpp  main_buildup_perf.cpp
